# neo-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LUMEN_SPEC.md  MANIFESTO.md  README.md  pyproject.toml
docs/: CAPABILITY_AWARENESS_MANIFESTO.md  LUMEN_INTEROPERABILITY_PRINCIPLE.md  PLAN_REMOTE_CATALOGS_AND_PYPI.md  REDESIGN_PLAN.md  structured-output.md
lumen/: __init__.py
lumen/catalog/: index.yaml
lumen/catalog/kits/x-lumen-dev/: module.yaml  personality.yaml
lumen/catalog/kits/x-lumen-focus/: module.yaml  personality.yaml
lumen/catalog/kits/x-lumen-peluqueria/: module.yaml  personality.yaml
lumen/catalog/kits/x-lumen-personal/: module.yaml  personality.yaml
lumen/catalog/kits/x-lumen-restaurant/: module.yaml  personality.yaml
lumen/catalog/kits/x-lumen-scholar/: module.yaml  personality.yaml
lumen/catalog/mcp_overrides/: README.md  anthropic.yaml  filesystem.yaml  github.yaml  openai.yaml  slack.yaml
lumen/catalog/modules/file-manager/: manifest.yaml
lumen/catalog/modules/scheduler/: SKILL.md
lumen/catalog/modules/web-search-provider/: manifest.yaml
lumen/channels/: __init__.py  web.py
lumen/channels/templates/: awakening.html  channels.html  confirmations.html  dashboard.html  models.html  outputs.html  owner_setup.html  security.html  settings_general.html  setup.html  tools.html
lumen/cli/: __init__.py  doctor.py  main.py
lumen/connectors/: built-in.yaml
lumen/core/: __init__.py  api_keys.py  artifact_setup.py  awareness.py  brain.py  capability_consciousness.py  catalog.py  cerebellum.py  cerebelo.py  connectors.py  consciousness.py  consciousness.yaml  discovery.py  events.py  handlers.py  installer.py  interoperability.py  marketplace.py  mcp.py  memory.py  module_runtime.py  module_setup.py  paths.py  personality.py  registry.py  runtime.py  secrets_store.py  session.py  tool_policy.py  watchers.py
lumen/locales/en/: personality.yaml  ui.yaml
lumen/locales/es/: personality.yaml  ui.yaml
lumen/modules/_template/: manifest.yaml
lumen/modules/scheduler/: SKILL.md  manifest.yaml
lumen/skills/file-reader/: SKILL.md
lumen/skills/text-responder/: SKILL.md
lumen/skills/web-search/: SKILL.md
neo/catalog/: index.yaml
neo/channels/: web.py
neo/channels/templates/: dashboard.html
neo/cli/: main.py
neo/core/: brain.py  catalog.py  connectors.py  discovery.py  handlers.py  installer.py
tests/: conftest.py  test_api_keys.py  test_artifact_setup.py  test_awareness.py  test_brain.py  test_bug6_rest_auth.py  test_bugfixes_vps.py  test_cerebelo.py  test_cli_wizard.py  test_config_cli.py  test_health.py  test_hot_reload.py  test_instance_isolation.py  test_instance_local_modules.py  test_kit_install.py  test_lifecycle_hooks.py  test_marketplace.py  test_mcp_runtime.py  test_memory.py  test_module_manifests.py  test_module_setup.py  test_openrouter_oauth.py  test_personality_swap.py  test_remote_catalogs.py  test_remote_install.py  test_rest_chat.py  test_skill_interpolation.py  test_skill_interpolation_runtime.py  test_skills_sh.py  test_terminal_connector.py  test_web_surfaces.py
tests/fixtures/: fake_mcp_server.py
(+40 files in other folders)
