[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lumen-agent"
version = "0.1.0"
description = "Open-source AI agent engine. Modular. No limits."
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "litellm>=1.40.0",
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0",
    "typer[all]>=0.12.0",
    "jinja2>=3.1.0",
    "websockets>=12.0",
    "pydantic>=2.7.0",
]

[project.scripts]
lumen = "lumen.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["lumen"]

[tool.hatch.build.targets.wheel.force-include]
"lumen/core/consciousness.yaml" = "lumen/core/consciousness.yaml"
"lumen/connectors/built-in.yaml" = "lumen/connectors/built-in.yaml"
"lumen/channels/templates" = "lumen/channels/templates"
"lumen/locales" = "lumen/locales"
"lumen/modules" = "lumen/modules"
"lumen/skills" = "lumen/skills"
"lumen/catalog" = "lumen/catalog"
